--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^0.26.1",
-    "cron": "^1.8.2",
-    "node-cron": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-qr-code": "^2.0.5",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "optionalDependencies": {}
 }
