--- a/server/package.json
+++ b/server/package.json
@@ -18,14 +18,13 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "create-hash": "^1.2.0",
-    "cron": "^1.8.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "js-sha256": "^0.9.0",
     "long": "^5.2.0",
-    "node-cron": "^3.0.0",
     "node-int64": "^0.4.0",
     "request": "^2.88.2",
+    "socket.io": "^4.4.1",
     "text-encoder": "0.0.4",
     "uuid": "^8.3.2"
   },
